Fri Aug  9 22:04:45 UTC 2013  Phillip LaBanca  <labanca_p@ociweb.com>

        * dds/DCPS/DataReaderImpl.h:
        * dds/DCPS/MultiTopicDataReaderBase.cpp:
        * dds/DCPS/ZeroCopySeq_T.h:
        * dds/DCPS/ZeroCopySeq_T.cpp:

        * dds/idl/CPPTemplate.txt:
        * dds/idl/HTemplate.txt:
          Added methods to ZeroCopyDataSeq template support incrementing and decrementing zero copy references.  

Thu Aug  1 23:08:51 UTC 2013  Mike Martinez  <martinez_m@ociweb.com>

        * dds/DCPS/DataReaderImpl.cpp:

          Correct spelling and scope errors introduced by the last
          check-in that was done *prior* to compilation.  Ordering is
          everything...

Thu Aug  1 22:13:39 UTC 2013  Mike Martinez  <martinez_m@ociweb.com>

        * dds/DCPS/DataReaderImpl.cpp:

          RT16148 - reduce lock scope to avoid a deadlock by attempting
          to acquire the reactor and sample locks in different order on
          different threads.

Thu Jun 20 17:08:37 UTC 2013  Mike Martinez  <martinez_m@ociweb.com>

        * dds/DCPS/transport/rtps_udp/RtpsUdpInst.cpp:

          Allow configuration string for multicast default transport
          port to be w_char.

Tue Jun 18 22:15:41 UTC 2013  Mike Martinez  <martinez_m@ociweb.com>

        * dds/DCPS/RTPS/RtpsDiscovery.h:
        * dds/DCPS/RTPS/RtpsDiscovery.cpp:

          Changed "DefaultMulticastGroup" configuration key to
          "InteropMulticastOverride" to indicate the semantics better.
          Added some documentation.

        * dds/DCPS/transport/rtps_udp/RtpsUdpDataLink.cpp:
        * dds/DCPS/transport/rtps_udp/RtpsUdpInst.cpp:

          Include a port number if the user does not supply one with the
          multicast group specification.  The default port added this way
          is 7401.
          Added some documentation.

        * tests/DCPS/RtpsDiscovery/rtps_disc_group.ini:

          Migrated the multicast groups used to the un-routed local