@@ -1,3 +1,10 @@
+Mon Aug 12 19:01:19 UTC 2013  Phillip LaBanca  <labanca_p@ociweb.com>
+
+        * tests/DCPS/unit/MyTypeSupportImpl.h:
+        * tests/DCPS/unit/MyTypeSupportImpl.cpp:
+          Updated test due to changes to ZeroCopyDataSeq template 
+          interface 
+
 Fri Aug  9 22:04:45 UTC 2013  Phillip LaBanca  <labanca_p@ociweb.com>
 
         * dds/DCPS/DataReaderImpl.h:
@@ -7,7 +14,8 @@ Fri Aug  9 22:04:45 UTC 2013  Phillip LaBanca  <labanca_p@ociweb.com>
 
         * dds/idl/CPPTemplate.txt:
         * dds/idl/HTemplate.txt:
-          Added methods to ZeroCopyDataSeq template support incrementing and decrementing zero copy references.  
+          Added methods to ZeroCopyDataSeq template support incrementing and 
+          decrementing zero copy references.
 
 Thu Aug  1 23:08:51 UTC 2013  Mike Martinez  <martinez_m@ociweb.com>
 
